--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ autocomplete="email" required placeholder="eg@gmail.com">
 
 <!-- QUERY LIST -->
 <h2 class="query">Query Type *</h2>
-<label for="query1"  class="value">General Enquiry</label>
-<label for="query" class="value2" >Support Request</label>
+<h3  class="value">General Enquiry</h2>
+<h3 class="value2">Support Request</h2>
 <span class="box-err"></span>
 
 <!-- MESSAGE -->
